[package]
name = "goojara-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
chrono = {version = "0.4.31", features = ["serde"]}
dotenv = "0.15.0"
log = "0.4.20"
regex = {version = "1.9.5"}
serde = {version = "1.0.188", features = ["serde_derive", "derive"]}
serde_json = "1.0.107"
tokio = {version = "1.32.0", features = ["full"]}
env_logger = "0.10.0"
scraper = "0.17.1"
curl = "0.4.44"
lazy_static = "1.4.0"
cookie = "0.18.0"
indicatif = { version = "0.17.7", features = [] }